Update operation on recipe